test/typechecker.d/invalid/poly0.surc.bad
f(x: forall A. A): B = x
